Added operation and injections to config ... added psuedo code for basic operation pattern ... cleaned up operation definitions